# pesquisador

./: .gitignore  README.md  consultar.py  main.py  pyproject.toml
back/: .gitignore  pyproject.toml
back/src/: main.py
back/src/agents/: pesquisador.py
back/src/db/: conexao.py
back/src/repository/: ofertas.py
back/src/schemas/: ofertas.py
back/src/tools/: consultas.py
front/: index.html
front/src/: main.js  socket.js  style.css
