[project]
name = "rag"
version = "0.1.0"
description = "Leitura de dados para geração"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-google-genai>=2.0.1",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "streamlit>=1.38.0",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "langchain-ollama>=0.3.10",
]
